[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/example.gd" type="Script" id=1]
[ext_resource path="res://scenes/cubes/Steel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/characters/players/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/cubes/Wood.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/cube_holders/Weapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/steel.png" type="Texture" id=6]
[ext_resource path="res://scenes/characters/foes/Foe.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ex_Foe.gd" type="Script" id=8]
[ext_resource path="res://scenes/cubes/Stone.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Steel" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( 508.778, 394.507 )
collision_layer = 16
collision_mask = 0
_sections_unfolded = [ "Collision" ]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

TEAM = 1

[node name="Wood" parent="Player/Body/CubeContainer" index="0" instance=ExtResource( 4 )]

[node name="Weapon" parent="Player/WeaponHolder" index="0" instance=ExtResource( 5 )]

position = Vector2( 0, 0 )
_sections_unfolded = [ "Transform" ]
SIZE = Vector2( 1, 3 )
CENTER = Vector2( 0, 2 )
WEIGHT = 0.0
LIFE = 0.1

[node name="Wood" parent="Player/WeaponHolder/Weapon/CubeContainer" index="0" instance=ExtResource( 4 )]

[node name="Wood2" parent="Player/WeaponHolder/Weapon/CubeContainer" index="1" instance=ExtResource( 4 )]

position = Vector2( 0, -40 )

[node name="Wood3" parent="Player/WeaponHolder/Weapon/CubeContainer" index="2" instance=ExtResource( 4 )]

position = Vector2( 0, -80 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="2"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="StaticBody2D" index="0"]

position = Vector2( 416.273, 269.682 )
scale = Vector2( 1, 13.2598 )
texture = ExtResource( 6 )

[node name="Foe" parent="." index="3" instance=ExtResource( 7 )]

position = Vector2( 189.091, 209.497 )
script = ExtResource( 8 )
MOMENTUM = 0.0
MASS = 0.0
HP = 0.0
ARMOR = 0.0
STRENGTH = 0.0
DMG = 0.0
WEAPON_HP = 0.0
SPEED = 0.0
LUCK = 0.0
TIME_PER_DECISION = 0.01

[node name="Body" parent="Foe" index="0"]

SIZE = Vector2( 1, 1 )
CENTER = Vector2( 0, 0 )

[node name="Stone" parent="Foe/Body/CubeContainer" index="0" instance=ExtResource( 9 )]

[node name="Weapon" parent="Foe/WeaponHolder" index="0" instance=ExtResource( 5 )]

SIZE = Vector2( 1, 2 )
CENTER = Vector2( 0, 1 )
WEIGHT = 0.0
LIFE = 0.1

[node name="Wood" parent="Foe/WeaponHolder/Weapon/CubeContainer" index="0" instance=ExtResource( 4 )]

[node name="Wood2" parent="Foe/WeaponHolder/Weapon/CubeContainer" index="1" instance=ExtResource( 4 )]

position = Vector2( 0, -40 )

[connection signal="damage" from="Steel" to="." method="_on_Steel_damage"]

[connection signal="destroyed" from="Steel" to="." method="_on_Steel_destroyed"]

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]

[connection signal="dead" from="Foe" to="." method="_on_Foe_dead"]

[connection signal="request_player_position" from="Foe" to="." method="_on_Foe_request_player_position"]


[editable path="Steel"]
[editable path="Player"]
[editable path="Player/Body"]
[editable path="Player/WeaponHolder/Weapon"]
[editable path="Foe"]
[editable path="Foe/Body"]
[editable path="Foe/WeaponHolder/Weapon"]
